Make canvas scrollbars interactive, fix key bindings issue

--- a/packages/app-web/src/views/canvas/canvas.scss
+++ b/packages/app-web/src/views/canvas/canvas.scss
@@ -78,10 +78,4 @@
     z-index: $z-index-canvas-scrollbars;
     pointer-events: none;
   }
-
-  &__scrollbars-vertical,
-  &__scrollbars-horizontal {
-    fill: $c-meta;
-    opacity: 0.4;
-  }
 }
